--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Aui va otro titulo mas interesante</h1>
