--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="post">
                 <h1>Aui va otro titulo mas interesante</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
-                    las cosas increíbles que se pueden hacer con ramas</p>
+                    las cosas increíbles que se pueden hacer con ramas</p><p>Este es otro parrafo de prueba para hacer merge</p>
             </div>
 
         </div>
