--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de seguridad</span>
             </div>
             <div id="post">
                 <h1>Aui va otro titulo mas interesante</h1>
